--- a/rust/stackablectl/Cargo.toml
+++ b/rust/stackablectl/Cargo.toml
@@ -30,6 +30,7 @@ serde.workspace = true
 snafu.workspace = true
 tera.workspace = true
 tokio.workspace = true
+toml.workspace = true
 tracing-subscriber.workspace = true
 tracing.workspace = true
 tracing-indicatif.workspace = true
