--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,7 @@ stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git",
 tera = "1.20"
 termion = "4.0"
 tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "fs", "process", "io-std"] }
+toml = { version = "0.9.8", features = ["serde"] }
 tower-http = { version = "0.5", features = ["validate-request"] }
 tracing = "0.1"
 tracing-indicatif = "0.3.9"
